@@ -1110,6 +1110,12 @@ if (_rpmfi_debug < 0)
 fprintf(stderr, "*** fi %p\t%s[%d]\n", fi, fi->Type, fi->fc);
 /*@=modfilesys@*/
 
+    /* Free pre- and post-transaction script and interpreter strings. */
+    fi->pretrans = _free(fi->pretrans);
+    fi->pretransprog = _free(fi->pretransprog);
+    fi->posttrans = _free(fi->posttrans);
+    fi->posttransprog = _free(fi->posttransprog);
+
     /*@-branchstate@*/
     if (fi->fc > 0) {
 	fi->bnl = hfd(fi->bnl, -1);
@@ -1197,6 +1203,11 @@ static inline unsigned char nibble(char c)
 	(_fi)->_data = memcpy(xmalloc((_fi)->fc * sizeof(*(_fi)->_data)), \
 			(_fi)->_data, (_fi)->fc * sizeof(*(_fi)->_data))
 
+/* XXX Ick, not SEF. */
+#define _fdupestring(_h, _tag, _data) \
+    if (hge((_h), (_tag), NULL, (void **) &(_data), NULL)) \
+	_data = xstrdup(_data)
+
 rpmfi rpmfiNew(const rpmts ts, Header h, rpmTag tagN, int scareMem)
 {
     HGE_t hge =
@@ -1243,6 +1254,12 @@ rpmfi rpmfiNew(const rpmts ts, Header h, rpmTag tagN, int scareMem)
     xx = hge(h, RPMTAG_ARCHIVESIZE, NULL, (void **) &uip, NULL);
     fi->archivePos = 0;
     fi->archiveSize = (xx ? *uip : 0);
+
+    /* Extract pre- and post-transaction script and interpreter strings. */
+    _fdupestring(h, RPMTAG_PRETRANS, fi->pretrans);
+    _fdupestring(h, RPMTAG_PRETRANSPROG, fi->pretransprog);
+    _fdupestring(h, RPMTAG_POSTTRANS, fi->posttrans);
+    _fdupestring(h, RPMTAG_POSTTRANSPROG, fi->posttransprog);
 
     if (!hge(h, RPMTAG_BASENAMES, NULL, (void **) &fi->bnl, &fi->fc)) {
 	fi->fc = 0;
