@@ -20,6 +20,7 @@
 	- add support for V4 rfc-2440 signatures.
 	- sqlite3: run-time endian test rather than chasing <endian.h> (#146752).
 	- discover and use getmntinfo if present.
+	- perform callbacks as always (#147537).
 
 4.3.3 -> 4.4:
 	- pentium3/pentium4 arch support (pluto@PLD).
